New major descriptions

--- a/classes/english.html
+++ b/classes/english.html
@@ -4,31 +4,68 @@
   </head>
   <body>
 <b>Professors:</b><ul>
-      <li>Aaron A. Elrod, Assistant Professor of Economics </li>
-      <li>Stephen A. Ford, Visiting Associate Professor of Economics </li>
-      <li>Beth Pride Ford, Visiting Associate Professor of Economics </li>
-      <li>Serkan Karadas, Assistant Professor of Economics</li>
-      <li>Yasmeen Mohiuddin, Ralph Owen Distinguished Professor of Economics </li>
-      <li>Xiaofei (Sophia) Pan, Assistant Professor of Economics </li>
-      <li>Minh Tam (Tammy) Schlosky, Visiting Assistant Professor of Economics</li>
-      <li>Marc St-Pierre, Chair and Associate Professor of Economics</li>
-      <li>Katherine C. Theyson, Assistant Professor of Economics </li>
-      <li>E. Douglas Williams, Frank W. Wilson Professor of Economics; Interim Treasurer</li>
-      <li>Aaron A. Elrod, Assistant Professor of Economics </li>
-      <li>Stephen A. Ford, Visiting Associate Professor of Economics </li>
-      <li>Beth Pride Ford, Visiting Associate Professor of Economics </li>
-      <li>Serkan Karadas, Assistant Professor of Economics</li>
-      <li>Yasmeen Mohiuddin, Ralph Owen Distinguished Professor of Economics </li>
-      <li>Xiaofei (Sophia) Pan, Assistant Professor of Economics </li>
-      <li>Minh Tam (Tammy) Schlosky, Visiting Assistant Professor of Economics</li>
-      <li>Marc St-Pierre, Chair and Associate Professor of Economics</li>
-      <li>Katherine C. Theyson, Assistant Professor of Economics </li>
-      <li>E. Douglas Williams, Frank W. Wilson Professor of Economics; Interim Treasurer</li>
+      <li>Associate Professor Malone, Chair</li>
+      <li>Professor Reishman</li>
+      <li>Professor Carlson</li>
+      <li>Professor Prunty, Director of the Certificate in Creative Writing</li>
+      <li>Professor Macfie</li>
+      <li>Professor J. Grammer</li>
+      <li>Professor Gatta</li>
+      <li>Professor Michael</li>
+      <li>Professor Engel</li>
+      <li>Assistant Professor Tucker</li>
+      <li>Assistant Professor Irvin</li>
+      <li>Assistant Professor Wilson</li>
+      <li>Assistant Professor Macdonald</li>
+      <li>Senior Tennesse Williams Playwright-in-Residence and Visiting Associate Professor Anderson</li>
+      <li>Visiting Assistant Professor E. Grammer</li>
+      <li>Visiting Assistant Professor Craighill</li>
+      <li>Adjunct Associate Professor Bruce</li>
       </ul>
       <br><br>
-Using economic methodology to understand and interpret complex market and social phenomena, this program develops rigorous and analytical thinkers. In addition to the core courses in microeconomics and macroeconomics, students choose from numerous courses taught by faculty who are experts in their teaching area. A sample of course offerings includes international trade, environmental economics, labor economics, health economics, game theory, behavioral economics, women and the economy and finance. In addition to the emphasis on understanding and explaining market phenomena, all courses place a heavy emphasis on public policy.
+The study of English language and literature has long held a prominent place among Sewanee’s educational offerings. English majors at Sewanee receive an unsurpassed training in Shakespeare, English literature before 1750, and other traditional elements of British and American literary history. They can also choose to take courses in modern and contemporary literature, world literature in English, diverse literary genres, and a broad range of special topics. Among the many distinctive offerings available to students are courses devoted to literature of the American South, Irish literature, women and literature, poetry and contemplation, and American literary journalism.
 <br><br>
-Economics majors pursue careers in a wide variety of fields, including business management, finance, banking, consulting, law, public policy and academe.
+For majors and non-majors alike, Sewanee’s Department of English contributes to an education in which students learn to interpret both texts and the world with deep imagination and to write with grace, clarity, and cogency. Following graduation, many English majors from the College have pursued successful careers as teachers, professors, lawyers, business or nonprofit executives, actors, clergypersons, journalists, media specialists, physicians, or editors of noted publications.
+<br><br>
+Consistent with Sewanee’s historically rich literary heritage, the English Department also offers students varied opportunities for training in creative writing under the tutelage of celebrated faculty authors of fiction and poetry and of visiting playwrights or other writers appointed to serve as Tennessee Williams Fellows. Talks by visiting scholar-critics and authors of distinction contribute further to a departmental atmosphere characterized by close, lively interaction between students and faculty.
+<br><br>
+Major in English: English majors must plan their academic curriculum carefully with their advisor. All majors are expected to take English 357 and 358 (Shakespeare) and at least two other courses in English literature before 1750. Potential or actual English majors are strongly urged to take English 200: Representative Masterpieces. Almost all majors take the full complement of eleven courses in English.
+<br><br>
+A student majoring in English is required to complete successfully a minimum of eight full courses in English. In addition, majors must pass a written comprehensive examination, which must be taken in the final semester of enrollment. At the beginning of the final semester, an English major with an average of 3.5 or better in English courses may, at the discretion of the chair, elect a course of independent study — the English Tutorial. The student must be enrolled in English 452, assigned a tutor for direction, and write a major essay as a step toward departmental honors. Students enrolled in English 452 who demonstrate excellence in their tutorial papers and in the written comprehensive examination are invited to take a one-hour oral examination in order to qualify for departmental honors.
+<br><br>
+The beginning and advanced creative writing courses (English 409, 410, and 411; and English 419, 420, and 421) are excluded from coverage on the comprehensive examination, and they count as courses outside the major.
+<br><br>
+Certificate in Creative Writing: Any undergraduate, regardless of the major field of study, may earn a bachelor’s degree (B.A. or B.S.) with a Certificate in Creative Writing noted on the transcript by fulfilling these requirements.
+<br><br>
+1. Three of the following seminars in Creative Writing:
+<br>Writ 205: Creative Writing: Poetry
+<br>Writ 206: Creative Writing: Fiction
+<br>Writ 207: Creative Writing: Playwriting
+<br>Writ 305: Advanced Creative Writing: Poetry
+<br>Writ 306: Advanced Creative Writing: Fiction
+<br>Writ 307: Advanced Creative Writing: Playwriting
+<br>Writ 413: Creative Writing: The Song Lyric
+<br><br>
+2. One designated course in literature:
+<br><br>
+a. English majors must present a single literature course offered through a department of classical or modern languages that has the prior approval of the Director of the Certificate in Creative Writing. Courses designated Engl may not be used. The course may be either in the original language or in translation; if the course is in the original language, the course must surpass the minimal standards of the General Distribution Requirements.
+<br><br>
+b. For non-English majors the course must be in twentieth-century or post-twentieth-century literature, selected from among the following:
+<br>Engl 381: Modern British Poetry
+<br>Engl 382: Modern British Fiction, 1900-1930
+<br>Engl 383: Contemporary British Fiction, 1930-present
+<br>Engl 386: Joyce
+<br>Engl 390: Modern Drama
+<br>Engl 391: Modern American Poetry
+<br>Engl 392: Modern American Fiction
+<br>Engl 393: Faulkner
+<br>Engl 394: Literature of the American South
+<br>Engl 395: African American Literature
+<br>Engl 397: Contemporary American Fiction
+<br>Engl 398: Contemporary American Poetry
+<br>Engl 399: World Literature in English
+<br><br>
+3. A Capstone Project. The Capstone Project could be a sheaf of poems or short stories, a more substantial single piece of fiction such as a novella, or a one-act play. Students must present the Capstone Project in the third Creative Writing seminar taken, demonstrating thereby their mastery within and critical self-consciousness regarding a particular genre.
 
   </body>
   </html>
