--- a/Majors.html
+++ b/Majors.html
@@ -19,30 +19,25 @@
 <a href="classes/computerScience.php">Computer Science</a><br>
 <a href="classes/ecologyAndBiodiversity.html">Ecology and Biodiversity</a><br>
 <a href="classes/economics.html">Economics</a><br>
-<a href="english.html">English</a><br>
-<a href="enviornmentalArtsAndHumanities.html">Enviornmental Arts and Humanities</a><br>
-<a href="enviornmentAndSustainability.html">Enviornment and Sustainability</a><br>
-<a href="forestry.html">Forestry</a><br>
-<a href="frenchAndFrenchStudies.html">French and French Studies</a><br>
-<a href="geology.html">Geology</a><br></td>
-<td><a href="german.html">German</a><br>
-<a href="greek.html">Greek</a><br>
-<a href="history.html">History</a><br>
-<a href="igs.html">International and Global Studies</a><br>
-<a href="latin.html">Latin</a><br>
-<a href="math.html">Mathematics</a><br>
-<a href="medievalStudies.html">Medieval Studies</a><br>
-<a href="music.html">Music</a><br>
-<a href="natty.html">Natural Resources and the Enviornment</a><br>
-<a href="philosophy.html">Philosophy</a><br>
-<a href="physics.html">Physics</a><br>
-<a href="politics.html">Politics</a><br>
-<a href="psycology.html">Psycology</a><br>
-<a href="religion.html">Religion</a><br>
-<a href="russian.html">Russian</a><br>
-<a href="spanish.html">Spanish</a><br>
-<a href="theatre.html">Theatre</a><br>
-<a href="women.html">Women and Gender Studies</a><br>
+<a href="classes/english.html">English</a><br>
+<a href="classes/enviornmentalArtsAndHumanities.html">Enviornmental Arts and Humanities</a><br>
+<a href="classes/forestry.html">Forestry and Geology</a><br>
+<a href="classes/frenchAndFrenchStudies.html">French and French Studies</a><br>
+<td><a href="classes/german.html">German</a><br>
+<a href="classes/history.html">History</a><br>
+<a href="classes/igs.html">International and Global Studies</a><br>
+<a href="classes/math.html">Mathematics</a><br>
+<a href="classes/medievalStudies.html">Medieval Studies</a><br>
+<a href="classes/music.html">Music</a><br>
+<a href="classes/philosophy.html">Philosophy</a><br>
+<a href="classes/physics.html">Physics</a><br>
+<a href="classes/politics.html">Politics</a><br>
+<a href="classes/psycology.html">Psycology</a><br>
+<a href="classes/religion.html">Religion</a><br>
+<a href="classes/russian.html">Russian</a><br>
+<a href="classes/spanish.html">Spanish</a><br>
+<a href="classes/theatre.html">Theatre</a><br>
+<a href="classes/women.html">Women and Gender Studies</a><br>
 </td></tr></table>
 </div>
   </body>
