--- a/Majors.html
+++ b/Majors.html
@@ -16,7 +16,7 @@
 <a href="classes/biology.html">Biology</a><br>
 <a href="classes/chemistry.html">Chemistry</a><br>
 <a href="classes/classicalLanguages.html">Classical Languages<a><br>
-<a href="classes/computerScience.html">Computer Science</a><br>
+<a href="classes/computerScience.php">Computer Science</a><br>
 <a href="classes/ecologyAndBiodiversity.html">Ecology and Biodiversity</a><br>
 <a href="classes/economics.html">Economics</a><br>
 <a href="english.html">English</a><br>
